--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,11 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Aimedis System" />
+  <meta name="description" content="Aimedis Information System" />
   <link rel="apple-touch-icon" href="logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
   <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCNLBs_RtZoI4jdrZg_CjBp9hEM6SBIh-4&libraries=places&sensor=false"></script>
-  <title>Aimedis System</title>
+  <title>Aimedis Information System</title>
 </head>
 
 <body>
